--- a/index.html
+++ b/index.html
@@ -9,6 +9,35 @@
         <link href="./statics/css/page.css" rel="stylesheet">
     </head>
     <body class="bg_color">
+        <nav class="navbar navbar-expand-lg nav-bg">
+            <div class="container-fluid">
+                <a class="navbar-brand text-light active" href="/" active>Oscar Winner List</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link text-light " aria-current="page" href="./api_output.html" target="_blank">Test My API</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light" aria-current="page" href="https://github.com/abhisaha15/oscar_winner_list_ui" target="_blank">GitHub</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light" aria-current="page" href="https://www.linkedin.com/posts/abhishek-saha-4b012b234_success-project-development-activity-7083553141169795072-rrCC?utm_source=share&utm_medium=member_desktop" target="_blank">Reviews</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+
+
+
+
+
+
         <div class="container mt-5">
             <div class="row">
                 <div class="col-md-8">
@@ -39,8 +68,17 @@
                 </div>
                 
             </div>
+
+
+            
         </div>
 
+        <footer class="footer mt-auto py-3">
+            <div class="container text-center">
+                <span class="text-light">Designed and Developed by: <a href="https://github.com/abhisaha15" target="_blank">Abhishek
+                        Saha</a></span>
+            </div>
+        </footer>
 
 
 
